--- a/src/app/restaurantes/pages/restaurante/restaurante.component.html
+++ b/src/app/restaurantes/pages/restaurante/restaurante.component.html
@@ -1,1 +1,35 @@
-<p>restaurante works!</p>
+
+<ng-template #divLoading>
+	<mat-grid-list cols="1">
+    	<mat-grid-tile>
+        	<mat-spinner></mat-spinner>
+    	</mat-grid-tile>
+	</mat-grid-list>
+</ng-template>
+
+<div *ngIf="restaurante; else divLoading" class="grid p-2">
+	<mat-card class="col-12 sm:col-6">
+    	<mat-card-header>
+        	<mat-card-title>{{restaurante[0].Nombre}}</mat-card-title>	 
+    	</mat-card-header>
+    	<img [src]="restaurante[0] | imagen" [alt]="restaurante[0].Nombre" mat-card-image>
+	</mat-card>
+	<mat-card class="col-12 sm:col-6">
+    	<mat-card-header>
+        	<mat-card-title>Información</mat-card-title>
+        	<mat-card-subtitle>{{restaurante[0].Nombre}}</mat-card-subtitle>	 
+    	</mat-card-header>
+    	<mat-card-content>
+        	<mat-list>
+                <mat-list-item>{{restaurante[0].Descripcion}}</mat-list-item>
+            	<mat-list-item>{{restaurante[0].Direccion}}</mat-list-item>
+            	<mat-list-item>{{restaurante[0].Capacidad}}</mat-list-item>
+            	<mat-list-item>{{restaurante[0].Telefono}}</mat-list-item>
+            	<mat-list-item>{{restaurante[0].WEB}}</mat-list-item>
+        	</mat-list>
+        	<button mat-button color="warn" >
+            	Regresar
+        	</button>
+    	</mat-card-content>
+	</mat-card>
+</div>
