--- a/src/app/restaurantes/pages/home/home.component.html
+++ b/src/app/restaurantes/pages/home/home.component.html
@@ -11,13 +11,13 @@
         	<a routerLink="./listado" mat-list-item (click)="sidenav.toggle()">
             	<!-- El click es para que se cierre -->
             	<mat-icon mat-list-icon>label</mat-icon>
-            	<span>Listado de Heroes</span></a>
+            	<span>Listado de Restaurantes</span></a>
         	<a routerLink="./agregar" mat-list-item (click)="sidenav.toggle()">
             	<mat-icon mat-list-icon>add</mat-icon>
-            	<span>Añadir Heroe</span></a>
+            	<span>Añadir Restaurante</span></a>
         	<a routerLink="./buscar" mat-list-item (click)="sidenav.toggle()">
             	<mat-icon mat-list-icon>search</mat-icon>
-            	<span>Buscar Heroe</span></a>
+            	<span>Buscar Restaurante</span></a>
     	</mat-nav-list>
 	</mat-sidenav>
 
@@ -29,9 +29,6 @@
     	<!-- Defino esta clase en styles.css, es para que se vea a la derecha.-->
     	<!-- <span>{{auth.usuario}}</span> -->
     	<button mat-button (click)="logout()">
-        	Logout
-    	</button>
-        <button mat-button >
         	Logout
     	</button>
 	</mat-toolbar>
