--- a/src/app/restaurantes/pages/agregar/agregar.component.html
+++ b/src/app/restaurantes/pages/agregar/agregar.component.html
@@ -1,1 +1,72 @@
-<p>agregar works!</p>
+<h1>
+	{{ (restaurante.id) ? 'Editar' : 'Nuevo' }}
+	Restaurante
+	<small>{{restaurante.nombre}}</small>
+</h1>
+<mat-divider class="mb-2"></mat-divider>
+
+<div class="grid">
+	<div class="col-12 sm:col-6">
+    	<mat-card>
+        	<mat-card-content>
+            	<div class="grid">
+                	<mat-form-field class="col-12 ">
+                    	<mat-label>Nombre </mat-label>
+                    	<input matInput type="text" required [(ngModel)]="restaurante.nombre">
+                	</mat-form-field>
+                	<mat-form-field class="col-12 ">
+                    	<mat-label>Descripcion</mat-label>
+                    	<input matInput type="text" required [(ngModel)]="restaurante.descripcion">
+                	</mat-form-field>
+                	<mat-form-field class="col-12">
+                    	<mat-label>Direccion</mat-label>
+                    	<input matInput type="text" required [(ngModel)]="restaurante.direccion">
+                	</mat-form-field>
+                    <mat-form-field class="col-12 sm:col-6" >
+                    	<mat-label>telefono</mat-label>
+                    	<input matInput type="text" required [(ngModel)]="restaurante.telefono">
+                	</mat-form-field>
+                	<mat-form-field class="col-12 sm:col-6">
+                    	<mat-label>Capacidad de comensales</mat-label>
+                    	<input matInput type="text" required [(ngModel)]="restaurante.capacidad">
+                	</mat-form-field>
+                    <mat-form-field class="col-12">
+                    	<mat-label>Email</mat-label>
+                    	<input matInput type="text" required [(ngModel)]="restaurante.email">
+                	</mat-form-field>
+                    <mat-form-field class="col-12">
+                    	<mat-label>WEB</mat-label>
+                    	<input matInput type="text" required [(ngModel)]="restaurante.wEB">
+                	</mat-form-field>
+                	<mat-form-field class="col-12">
+                    	<mat-label>Url</mat-label>
+                    	<input matInput type="url" required [(ngModel)]="restaurante.url">
+                	</mat-form-field>
+                    <mat-form-field class="col-12">
+                    	<mat-label>Url_img</mat-label>
+                    	<input matInput type="url" required [(ngModel)]="restaurante.alt_img">
+                	</mat-form-field>
+
+            	</div>
+            	<div class="flex justify-content-between">
+                	<button mat-raised-button color="primary" (click)="guardar()">
+                    	<mat-icon>edit</mat-icon>
+                    	{{ (restaurante.id) ? 'Actualizar' : 'Crear' }}
+                	</button>
+                	<button *ngIf="restaurante.id" mat-raised-button color="warn" (click)="borrarRestaurante()" >
+                    	<mat-icon>remove</mat-icon>
+                    	Borrar
+                	</button>
+            	</div>
+        	</mat-card-content>
+    	</mat-card>
+	</div>
+	<div class="col-12 sm:col-6">
+    	<mat-card>    
+            	<img [src]="restaurante | imagen" mat-card-image>
+    	</mat-card>
+	</div>
+</div>
+
+
+
