--- a/src/app/restaurantes/pages/buscar/buscar.component.html
+++ b/src/app/restaurantes/pages/buscar/buscar.component.html
@@ -6,7 +6,7 @@
     <div>
         <h3>Buscador</h3>
         <mat-form-field>
-            <mat-label>Empiece a escribir el heroe</mat-label>
+            <mat-label>Empiece a escribir el Restaurante</mat-label>
             <input type="text" placeholder="Pick one" aria-label="Number" matInput [(ngModel)]="termino"
                 [matAutocomplete]="auto" (input)="buscando()">
             <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete" (optionSelected)="opcionSeleccionada( $event )">
