--- a/src/app/restaurantes/pages/home/home.component.html
+++ b/src/app/restaurantes/pages/home/home.component.html
@@ -27,7 +27,7 @@
     	</button>
     	<span class="spacer"></span>
     	<!-- Defino esta clase en styles.css, es para que se vea a la derecha.-->
-    	<!-- <span>{{auth.usuario}}</span> -->
+    	<span>{{auth.usuario}}</span>
     	<button mat-button (click)="logout()">
         	Logout
     	</button>
